--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 
 <body>
     <a href="./sites/testing.html">TESTING</a>
-
     <div>       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69 and *Brazilian Girl*</h1>
-            <img src="./img/gifs/Sweetkiss_69-cop-part2.gif">
+            <img src="./img/thumbnails/ari-love-cop-part1.png">
         </a>
         <a href="./sites/sister-story.html" class="vid">
             <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX and Brazilian Girl</h1>
             <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
-            <!-- <h1 class="hidden"> yeet</h1> -->
-            <h1>Brazilian Girl Dancing to Dua Lipa Physical and Levitating</h1>
+            <h1 class="hidden"> yeet</h1>
+            <h1>Dua Lipa Dancing</h1>
             <img src="./img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./sites/public.html" class="vid">
@@ -34,6 +33,10 @@
         <a href="./sites/bellydancing.html" class="vid">
             <h1>Belly dancing</h1>
             <img src="./img/thumbnails/sloansmoans-sensual-sways.png">
+        </a>
+        <a href="./sites/bellybutton.html" class="vid">
+            <h1>Belly Button</h1>
+            <img src="./img/thumbnails/LittleCSophie1-belly-button-custom.png">
         </a>
         <a href="./sites/youtube.html" class="vid">
             <h1>Youtube and Pornhub</h1>
@@ -46,10 +49,6 @@
         <a href="./sites/humiliation.html" class="vid">
             <h1>Humiliation (Sph, sissy)</h1>
             <img src="./img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
-        </a>
-        <a href="./sites/bellybutton.html" class="vid">
-            <h1>Belly Button</h1>
-            <img src="./img/thumbnails/Ivi_Roses-belly-button-therapist.png">
         </a>
         <a href="./sites/trans.html" class="vid">
             <h1>Trans</h1>
