--- a/sites/bellybutton.html
+++ b/sites/bellybutton.html
@@ -8,15 +8,20 @@
     <title>Belly Button</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/bellybutton.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/JosephineJackson-Belly-button-custom.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
-            <h1>Ivi Roses belly button therapist.</h1>
-            <video poster="../img/thumbnails/Ivi_Roses-belly-button-therapist.png" controls>
-                <source src="../vids/IviRoses_Belly-buttom-fetish-cum-with-therapist.mp4" type="video/mp4">
+            <h1>LittleCSophie1 Belly button custom</h1>
+            <video poster="../img/thumbnails/LittleCSophie1-belly-button-custom.png" controls>
+                <source src="../vids/LittleCSophie1-belly-button-custom.mp4" type="video/mp4">
             </video>
         </article>
         <article>
@@ -26,9 +31,9 @@
             </video>
         </article>
         <article>
-            <h1>LittleCSophie1 Belly button custom</h1>
-            <video poster="../img/thumbnails/LittleCSophie1-belly-button-custom.png" controls>
-                <source src="../vids/LittleCSophie1-belly-button-custom.mp4" type="video/mp4">
+            <h1>Ivi Roses belly button therapist.</h1>
+            <video poster="../img/thumbnails/Ivi_Roses-belly-button-therapist.png" controls>
+                <source src="../vids/IviRoses_Belly-buttom-fetish-cum-with-therapist.mp4" type="video/mp4">
             </video>
         </article>
         <article>
