--- a/sites/bellydancing.html
+++ b/sites/bellydancing.html
@@ -8,10 +8,15 @@
     <title>Belly Dancing</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/bellydancing.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/sloansmoans-sensual-sways.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Sloansmoans Sensual Sways</h1>
