--- a/sites/custom-ari-love.html
+++ b/sites/custom-ari-love.html
@@ -8,11 +8,16 @@
     <title>Ari Love Customs</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/arilove.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
     <a href="./custom.html">Back to customs</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Ari Love cop part 1</h1>
