--- a/sites/custom-sweetkiss_69.html
+++ b/sites/custom-sweetkiss_69.html
@@ -8,11 +8,16 @@
     <title>Sweetkiss_69 Customs</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/sweetkiss_69.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
     <a href="./custom.html">Back to customs</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/sweetkiss_69-cop-part2.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Sweetkiss_69 Cop part 1</h1>
@@ -30,6 +35,12 @@
             <h1>Sweetkiss_69 Sister part 1</h1>
             <video poster="../img/thumbnails/sweetkiss_69-sister.png" controls>
                 <source src="../vids/Sweetkiss_69-sister.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Sweetkiss_69 Unaware mom</h1>
+            <video poster="../img/thumbnails/sweetkiss_69-unaware-mom.png" controls>
+                <source src="../vids/Sweetkiss_69 Unaware mom.mp4" type="video/mp4">
             </video>
         </article>
     </div>
