--- a/sites/custom.html
+++ b/sites/custom.html
@@ -25,6 +25,10 @@
             <h1>CC Flight</h1>
             <img src="../img/thumbnails/cc-flight-stephinspace-custom.png">
         </a>
+        <a href="./custom-josephinejackson.html" class="vid">
+            <h1>JosephineJackson</h1>
+            <img src="../img/thumbnails/JosephineJackson-Belly-button-custom.png">
+        </a>
         <a href="./custom-karmarx.html" class="vid">
             <h1>Karma RX</h1>
             <img src="../img/thumbnails/karmarx-sister-horizontal.png">
