--- a/sites/dualipa.html
+++ b/sites/dualipa.html
@@ -8,10 +8,15 @@
     <title>Dua Lipa</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/dualipa.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Brazilian Girl Physical by Dua Lipa</h1>
@@ -23,12 +28,6 @@
             <h1>Brazilian Girl Levitating by Dua Lipa</h1>
             <video poster="../img/thumbnails/brazilian_girl-dua-lipa-levitating.png" controls>
                 <source src="../vids/Brazilian girl dancing Levitating by Dua Lipa.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>Brazilian Girl Physical and Levitating by Dua Lipa</h1>
-            <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls>
-                <source src="../vids/Brazilian girl dancing Physical and Levitating by Dua Lipa.mp4" type="video/mp4">
             </video>
         </article>
         <article>
