--- a/sites/custom-brazilian-girl.html
+++ b/sites/custom-brazilian-girl.html
@@ -8,11 +8,16 @@
     <title>Brazilian Girl Customs</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/braziliangirl.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
     <a href="./custom.html">Back to customs</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical-2.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Brazilian Girl Physical Dua Lipa</h1>
