--- a/sites/cop-story.html
+++ b/sites/cop-story.html
@@ -43,9 +43,9 @@
             </video>
         </article>
         <article>
-            <h1>Brazilian Girl cop part 1 *Ordered September 9th*</h1>
-            <video poster="../img/thumbnails/brazilian_girl-cop-custom.png" controls>
-                <source src="../vids/Brazilian Girl Cop Custom.mp4" type="video/mp4">
+            <h1>Brazilian Girl cop</h1>
+            <video poster="../img/thumbnails/cc-flight-stephinspace-custom.png" controls>
+                <source src="../vids/Brazilian Girl Custom cop.mp4" type="video/mp4">
             </video>
         </article>
     </div>
