--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -48,6 +48,12 @@
                 <source src="../vids/Brazilian girl Sister.mp4" type="video/mp4">
             </video>
         </article>
+        <article>
+            <h1>Isla White Sister</h1>
+            <video poster="../img/thumbnails/cc-flight-stephinspace-custom.png" controls>
+                <source src="../vids/Isla White Sister custom.mp4" type="video/mp4">
+            </video>
+        </article>
     </div>
     <footer>
         <p>Yeet</p>
