--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <a href="./sites/testing.html">TESTING</a>
     <div>       
         <a href="./sites/cop-story.html" class="vid">
-            <h1>Cop story with Ari Love, Sweetkiss_69 and *Brazilian Girl*</h1>
+            <h1>Cop story with Ari Love, Sweetkiss_69, Brazilian Girl</h1>
             <img src="./img/thumbnails/ari-love-cop-part1.png">
         </a>
         <a href="./sites/sister-story.html" class="vid">
-            <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX and Brazilian Girl</h1>
+            <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX, Brazilian Girl and Isla White</h1>
             <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
@@ -36,7 +36,7 @@
         </a>
         <a href="./sites/bellybutton.html" class="vid">
             <h1>Belly Button</h1>
-            <img src="./img/thumbnails/LittleCSophie1-belly-button-custom.png">
+            <img src="./img/thumbnails/JosephineJackson-Belly-button-custom.png">
         </a>
         <a href="./sites/youtube.html" class="vid">
             <h1>Youtube and Pornhub</h1>
