--- a/sites/custom.html
+++ b/sites/custom.html
@@ -18,12 +18,16 @@
             <img src="../img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./custom-brazilian-girl.html" class="vid">
-            <h1>Brazilian Girl *Waiting for 1 video*</h1>
+            <h1>Brazilian Girl</h1>
             <img src="../img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./custom-ccflight.html" class="vid">
             <h1>CC Flight</h1>
             <img src="../img/thumbnails/cc-flight-stephinspace-custom.png">
+        </a>        
+        <a href="./custom-islawhite.html" class="vid">
+            <h1>Isla White</h1>
+            <img src="../img/thumbnails/isla-white-sister-custom.png">
         </a>
         <a href="./custom-josephinejackson.html" class="vid">
             <h1>JosephineJackson</h1>
