--- a/sites/testing.html
+++ b/sites/testing.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing</title>
-    <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
     <script defer src="../scipts/testing.js"></script>
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
+    <a href="../index.html" class="link">START</a>
     <div id="vWrap">
         <video controls id="vVid"></video>
         <div id="vList"></div>
