--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <a href="./sites/testing.html">TESTING</a>
-    <div>       
+    <a href="./sites/testing.html" class="link">TESTING</a>
+    <div class="videos">       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69, Brazilian Girl</h1>
             <img src="./img/thumbnails/ari-love-cop-part1.png">
