--- a/sites/custom-josephinejackson.html
+++ b/sites/custom-josephinejackson.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JosephineJackson</title>
-    <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
