--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="./sites/testing.html" class="link">TESTING</a>
+    <a href="./sites/testing.html" class="link">Testing</a>
     <div class="videos">       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69, Brazilian Girl</h1>
