--- a/sites/custom-ari-love.html
+++ b/sites/custom-ari-love.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
-    <a href="./custom.html">Back to customs</a>
+    <a href="../index.html" class="link">Start</a>
+    <a href="./custom.html" class="link">Back to customs</a>
     <div id="vWrap">
         <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls id="vVid"></video>
         <div id="vList"></div>
