--- a/sites/custom-ccflight.html
+++ b/sites/custom-ccflight.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
-    <a href="./custom.html">Back to customs</a>
+    <a href="../index.html" class="link">Start</a>
+    <a href="./custom.html" class="link">Back to customs</a>
     <div class="videos">
         <article>
             <h1>CC Flight and Stephinspace custom</h1>
