--- a/sites/bellybutton.html
+++ b/sites/bellybutton.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
+    <a href="../index.html" class="link">Start</a>
     <div id="vWrap">
         <video poster="../img/thumbnails/JosephineJackson-Belly-button-custom.png" controls id="vVid"></video>
         <div id="vList"></div>
