--- a/sites/cei.html
+++ b/sites/cei.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
+    <a href="../index.html" class="link">Start</a>
     <div class="videos">
         <article>
             <h1>Lissie Belle take my cock and my cum</h1>
