--- a/sites/custom-sweetkiss_69.html
+++ b/sites/custom-sweetkiss_69.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
-    <a href="./custom.html">Back to customs</a>
+    <a href="../index.html" class="link">Start</a>
+    <a href="./custom.html" class="link">Back to customs</a>
     <div id="vWrap">
         <video poster="../img/thumbnails/sweetkiss_69-cop-part2.png" controls id="vVid"></video>
         <div id="vList"></div>
