--- a/sites/custom.html
+++ b/sites/custom.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
+    <a href="../index.html" class="link">Start</a>
     <div>
         <a href="./custom-ari-love.html" class="vid">
             <h1>Ari Love</h1>
