--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
+    <a href="../index.html" class="link">Start</a>
     <div id="vWrap">
         <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls id="vVid"></video>
         <div id="vList"></div>
