--- a/sites/testing.html
+++ b/sites/testing.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">START</a>
+    <a href="../index.html" class="link">Start</a>
     <div id="vWrap">
         <video controls id="vVid"></video>
         <div id="vList"></div>
