--- a/sites/trans.html
+++ b/sites/trans.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Start</a>
+    <a href="../index.html" class="link">Start</a>
     <div class="videos">
         <article>
             <h1>Sarina Valentina pov queen</h1>
