--- a/sites/custom.html
+++ b/sites/custom.html
@@ -12,7 +12,7 @@
 
 <body>
     <a href="../index.html" class="link">Start</a>
-    <div>
+    <div class="videos">
         <a href="./custom-ari-love.html" class="vid">
             <h1>Ari Love</h1>
             <img src="../img/thumbnails/ari_Love-sister-part1.png">
