--- a/sites/testing.html
+++ b/sites/testing.html
@@ -19,11 +19,11 @@
     </div>
     <div class="videos">
         <article>
-            <h1>Random Youtube NO ADS???????</h1>
-            <iframe src="https://www.youtube.com/embed/KM2-eeIJcs0" allowfullscreen></iframe>
+            <h1>Random Youtube</h1>
+            <iframe src="https://www.youtube.com/embed/12L0TooEwSQ" allowfullscreen></iframe>
         </article>
         <article>
-            <h1>Spankbang Not HD in Embeded Gabbie Carter</h1>
+            <h1>Spankbang Not HD in Embeded</h1>
             <iframe src="https://se.spankbang.com/6jk71/embed/" allowfullscreen></iframe>
         </article>
         <article>
