--- a/sites/youtube.html
+++ b/sites/youtube.html
@@ -15,7 +15,7 @@
     <div class="videos">
         <article>
             <h1>Claire Grimes</h1>
-            <iframe src="https://www.youtube.com/embed/12L0TooEwSQ" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/G1f3ZstUgcU" allowfullscreen></iframe>
         </article>
         <article>
             <h1>Christina Khalil</h1>
