--- a/sites/testing.html
+++ b/sites/testing.html
@@ -12,15 +12,23 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+        </div>
+    </header>
+    <h1 class="title">Testing</h1>
     <div id="vWrap">
-        <video controls id="vVid"></video>
+        <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls id="vVid"></video>
         <div id="vList"></div>
     </div>
     <div class="videos">
         <article>
             <h1>Random Youtube</h1>
-            <iframe src="https://www.youtube.com/embed/0V5GXks_xEQ" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/2mLNkpdc5Kw" allowfullscreen></iframe>
         </article>
         <article>
             <h1>Spankbang Not HD in Embeded</h1>
@@ -32,12 +40,19 @@
         </article>
         <article>
             <h1>Isla White Sister custom</h1>
-            <a href="https://www.manyvids.com/Video/4094631/Jerk-your-small-dick---SPH/" target="_blank" class="source">Source</a>
             <video poster="../img/thumbnails/isla-white-sister-custom.png" controls>
                 <source src="../vids/Isla White Sister custom.mp4" type="video/mp4">
             </video>
+            <a href="https://www.manyvids.com/Video/4094631/Jerk-your-small-dick---SPH/" target="_blank" class="source">Source</a>
+        </article>
+        <article>
+            <h1>Random</h1>
+            <video controls>
+                <source src="../vids/Ari Love Cop part 1.mp4" type="video/mp4">
+            </video>
         </article>
     </div>
+    <a href="../index.html" class="link">Start</a>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
