--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-    <a href="./sites/testing.html" class="link">Testing</a>
+    <header>
+        <a href="./index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sites/sister-story.html">Sister Story</a>
+            <a href="./site/cop-story.html">Cop Story</a>
+            <a href="./sites/custom.html">Customs</a>
+            <a href="./sites/testing.html">Testing</a>
+        </div>
+    </header>
     <div class="videos">       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69, Brazilian Girl</h1>
