--- a/sites/custom-brazilian-girl.html
+++ b/sites/custom-brazilian-girl.html
@@ -12,8 +12,16 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
-    <a href="./custom.html" class="link">Back to customs</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Brazilian Girl</h1>
     <div id="vWrap">
         <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical-2.png" controls id="vVid"></video>
         <div id="vList"></div>
