--- a/sites/custom-josephinejackson.html
+++ b/sites/custom-josephinejackson.html
@@ -11,11 +11,19 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
-    <a href="./custom.html" class="link">Back to customs</a>
-    <div class="videos">
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Josephine Jackson</h1>
+        <div class="videos">
         <article>
-            <h1>JosephineJackson Belly button custom</h1>
+            <h1>Josephine Jackson Belly button custom</h1>
             <video poster="../img/thumbnails/JosephineJackson-Belly-button-custom.png" controls>
                 <source src="../vids/JosephineJackson Belly button custom.mov" type="video/mp4">
             </video>
