--- a/sites/custom-lily_fox.html
+++ b/sites/custom-lily_fox.html
@@ -11,8 +11,16 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
-    <a href="./custom.html" class="link">Back to customs</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Lily_Fox</h1>
     <div class="videos">
         <article>
             <h1>Lily_Fox Belly button playing</h1>
