--- a/sites/custom.html
+++ b/sites/custom.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Customs</h1>
     <div class="videos">
         <a href="./custom-ari-love.html" class="vid">
             <h1>Ari Love</h1>
@@ -24,7 +33,7 @@
         <a href="./custom-ccflight.html" class="vid">
             <h1>CC Flight</h1>
             <img src="../img/thumbnails/cc-flight-stephinspace-custom.png">
-        </a>        
+        </a>
         <a href="./custom-islawhite.html" class="vid">
             <h1>Isla White</h1>
             <img src="../img/thumbnails/isla-white-sister-custom.png">
@@ -44,7 +53,7 @@
         <a href="./custom-littlecsophie1.html" class="vid">
             <h1>LittleCSophie1</h1>
             <img src="../img/thumbnails/LittleCSophie1-belly-button-custom.png">
-        </a>        
+        </a>
         <a href="./custom-naturalnadia.html" class="vid">
             <h1>Natural Nadia</h1>
             <img src="../img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
