--- a/sites/testing.html
+++ b/sites/testing.html
@@ -18,6 +18,7 @@
             <a href="./sister-story.html">Sister Story</a>
             <a href="./cop-story.html">Cop Story</a>
             <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
         </div>
     </header>
     <h1 class="title">Testing</h1>
@@ -28,7 +29,7 @@
     <div class="videos">
         <article>
             <h1>Random Youtube</h1>
-            <iframe src="https://www.youtube.com/embed/2mLNkpdc5Kw" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/9HDEHj2yzew" allowfullscreen></iframe>
         </article>
         <article>
             <h1>Spankbang Not HD in Embeded</h1>
@@ -48,11 +49,10 @@
         <article>
             <h1>Random</h1>
             <video controls>
-                <source src="../vids/Ari Love Cop part 1.mp4" type="video/mp4">
+                <source src="../GoddessTripleDBabe_20-Minute-JOI-Ruin-amp-CEI.mp4" type="video/mp4">
             </video>
         </article>
     </div>
-    <a href="../index.html" class="link">Start</a>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
