--- a/sites/bellybutton.html
+++ b/sites/bellybutton.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>   
+    <h1 class="title">Belly Button</h1> 
     <div id="vWrap">
         <video poster="../img/thumbnails/JosephineJackson-Belly-button-custom.png" controls id="vVid"></video>
         <div id="vList"></div>
