--- a/sites/cei.html
+++ b/sites/cei.html
@@ -11,8 +11,17 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
-    <div class="videos">
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Cum Eating Instructions</h1>
+        <div class="videos">
         <article>
             <h1>Lissie Belle take my cock and my cum</h1>
             <video poster="../img/thumbnails/Lissie_Belle-futa.png" controls>
