--- a/sites/custom-islawhite.html
+++ b/sites/custom-islawhite.html
@@ -11,9 +11,17 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
-    <a href="./custom.html" class="link">Back to customs</a>
-    <div class="videos">
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Isla White</h1>
+        <div class="videos">
         <article>
             <h1>Isla White Sister custom</h1>
             <video poster="../img/thumbnails/isla-white-sister-custom.png" controls>
