--- a/sites/custom-karmarx.html
+++ b/sites/custom-karmarx.html
@@ -11,12 +11,19 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
-    <a href="./custom.html" class="link">Back to customs</a>
-
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Karma RX</h1>
     <div class="videos">
         <article>
-            <h1>Karma RX</h1>
+            <h1>Karma RX Sister Custom</h1>
             <video poster="../img/thumbnails/karmarx-sister.png" controls>
                 <source src="../vids/KarmaRX-sister.mp4" type="video/mp4">
             </video>
