--- a/sites/dualipa.html
+++ b/sites/dualipa.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Dua Lipa Songs</h1>
     <div id="vWrap">
         <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls id="vVid"></video>
         <div id="vList"></div>
@@ -37,10 +46,12 @@
             </video>
         </article>
     </div>
+    <a class="youtube" target="_blank" href="https://www.youtube.com/watch?v=9HDEHj2yzew&list=PL2t5p-kVEZV_q8Gfy3GAfn5vIQKuHd9R0&index=1">Playlist</a>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
         <p>Yeet</p>
     </footer>
 </body>
+
 </html>
