--- a/sites/public.html
+++ b/sites/public.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-    <a href="../index.html" class="link">Start</a>
+    <header>
+        <a href="../index.html" class="logo">NSFW</a>
+        <div>
+            <a href="./sister-story.html">Sister Story</a>
+            <a href="./cop-story.html">Cop Story</a>
+            <a href="./custom.html">Customs</a>
+            <a href="./testing.html">Testing</a>
+        </div>
+    </header>
+    <h1 class="title">Public</h1>
     <div class="videos">
         <article>
             <h1>BralessForever Rocky subway.</h1>
