--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="./sites/testing.html">Testing</a>
         </div>
     </header>
-    <div class="videos">       
+    <div class="site">       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69, Brazilian Girl</h1>
             <img src="./img/thumbnails/ari-love-cop-part1.png">
