--- a/sites/custom.html
+++ b/sites/custom.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <h1 class="title">Customs</h1>
-    <div class="videos">
+    <div class="site">
         <a href="./custom-ari-love.html" class="vid">
             <h1>Ari Love</h1>
             <img src="../img/thumbnails/ari_Love-sister-part1.png">
