--- a/sites/testing.html
+++ b/sites/testing.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
     <script defer src="../scipts/testing.js"></script>
+    <script defer src="../scipts/topButton.js"></script>
 </head>
 
 <body class="testing">
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <header>
         <a href="../index.html" class="logo">NSFW</a>
         <div>
