--- a/index.html
+++ b/index.html
@@ -23,48 +23,48 @@
     <div class="site">       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69, Brazilian Girl</h1>
-            <img src="./img/thumbnails/ari-love-cop-part1.png">
+            <img class="site" src="./img/thumbnails/ari-love-cop-part1.png">
         </a>
         <a href="./sites/sister-story.html" class="vid">
             <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX, Brazilian Girl and Isla White</h1>
-            <img src="./img/thumbnails/ari_Love-sister-part1.png">
+            <img class="site" src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
             <h1 class="hidden"> yeet</h1>
             <h1>Dua Lipa Dancing</h1>
-            <img src="./img/thumbnails/brazilian_girl-dua-lipa-physical.png">
+            <img class="site" src="./img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./sites/public.html" class="vid">
             <h1>Public</h1>
-            <img src="./gifs/bralessforever-rocky-marce-drive.gif">
+            <img class="site" src="./gifs/bralessforever-rocky-marce-drive.gif">
         </a>
         <a href="./sites/bellydancing.html" class="vid">
             <h1>Belly dancing</h1>
-            <img src="./img/thumbnails/sloansmoans-sensual-sways.png">
+            <img class="site" src="./img/thumbnails/sloansmoans-sensual-sways.png">
         </a>
         <a href="./sites/bellybutton.html" class="vid">
             <h1>Belly Button</h1>
-            <img src="./img/thumbnails/JosephineJackson-Belly-button-custom.png">
+            <img class="site" src="./img/thumbnails/JosephineJackson-Belly-button-custom.png">
         </a>
         <a href="./sites/youtube.html" class="vid">
             <h1>Youtube and Pornhub</h1>
-            <img src="./img/thumbnails/Claire Grimes Thumbnail.png">
+            <img class="site" src="./img/thumbnails/Claire Grimes Thumbnail.png">
         </a>
         <a href="./sites/cei.html" class="vid">
             <h1>Cum Eating Instructions</h1>
-            <img src="./img/thumbnails/Lindsey_Leigh-cei.png">
+            <img class="site" src="./img/thumbnails/Lindsey_Leigh-cei.png">
         </a>
         <a href="./sites/humiliation.html" class="vid">
             <h1>Humiliation (Sph, sissy)</h1>
-            <img src="./img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
+            <img class="site" src="./img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
         </a>
         <a href="./sites/trans.html" class="vid">
             <h1>Trans</h1>
-            <img src="./img/thumbnails/Sarina-Valentina-pov-queen.png">
+            <img class="site" src="./img/thumbnails/Sarina-Valentina-pov-queen.png">
         </a>
         <a href="./sites/custom.html" class="vid">
             <h1>Customs</h1>
-            <img src="./img/thumbnails/ari_Love-sister-part1.png">
+            <img class="site" src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
     </div>
     <footer>
