--- a/sites/cop-story.html
+++ b/sites/cop-story.html
@@ -47,7 +47,7 @@
         </article>
         <article>
             <h1>Sweetkiss_69 cop part 2</h1>
-            <video poster="../gifs/Sweetkiss_69-cop-part2.gif" controls>
+            <video poster="../img/thumbnails/sweetkiss_69-cop-part2.png" controls>
                 <source src="../vids/Sweetkiss_69-cop-part2.mp4" type="video/mp4">
             </video>
         </article>
