--- a/sites/custom.html
+++ b/sites/custom.html
@@ -24,43 +24,47 @@
     <div class="site">
         <a href="./custom-ari-love.html" class="vid">
             <h1>Ari Love</h1>
-            <img src="../img/thumbnails/ari_Love-sister-part1.png">
+            <img class="site" src="../img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./custom-brazilian-girl.html" class="vid">
             <h1>Brazilian Girl</h1>
-            <img src="../img/thumbnails/brazilian_girl-dua-lipa-physical.png">
+            <img class="site" src="../img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./custom-ccflight.html" class="vid">
             <h1>CC Flight</h1>
-            <img src="../img/thumbnails/cc-flight-stephinspace-custom.png">
+            <img class="site" src="../img/thumbnails/cc-flight-stephinspace-custom.png">
+        </a>
+        <a href="./claire-grimes.html" class="vid">
+            <h1>Claire Grimes</h1>
+            <img class="site" src="../img/thumbnails/claire_grimes_custom_pic1.jpg">
         </a>
         <a href="./custom-islawhite.html" class="vid">
             <h1>Isla White</h1>
-            <img src="../img/thumbnails/isla-white-sister-custom.png">
+            <img class="site" src="../img/thumbnails/isla-white-sister-custom.png">
         </a>
         <a href="./custom-josephinejackson.html" class="vid">
             <h1>JosephineJackson</h1>
-            <img src="../img/thumbnails/JosephineJackson-Belly-button-custom.png">
+            <img class="site" src="../img/thumbnails/JosephineJackson-Belly-button-custom.png">
         </a>
         <a href="./custom-karmarx.html" class="vid">
             <h1>Karma RX</h1>
-            <img src="../img/thumbnails/karmarx-sister-horizontal.png">
+            <img class="site" src="../img/thumbnails/karmarx-sister-horizontal.png">
         </a>
         <a href="./custom-lily_fox.html" class="vid">
             <h1>Lily_Fox</h1>
-            <img src="../img/thumbnails/Lily_Fox-custom-belly-button.png">
+            <img class="site" src="../img/thumbnails/Lily_Fox-custom-belly-button.png">
         </a>
         <a href="./custom-littlecsophie1.html" class="vid">
             <h1>LittleCSophie1</h1>
-            <img src="../img/thumbnails/LittleCSophie1-belly-button-custom.png">
+            <img class="site" src="../img/thumbnails/LittleCSophie1-belly-button-custom.png">
         </a>
         <a href="./custom-naturalnadia.html" class="vid">
             <h1>Natural Nadia</h1>
-            <img src="../img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
+            <img class="site" src="../img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
         </a>
         <a href="./custom-sweetkiss_69.html" class="vid">
             <h1>Sweetkiss_69</h1>
-            <img src="../img/thumbnails/sweetkiss_69-cop-part1.png">
+            <img class="site" src="../img/thumbnails/sweetkiss_69-cop-part1.png">
         </a>
     </div>
     <footer>
