--- a/sites/testing.html
+++ b/sites/testing.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
     <script defer src="../scipts/testing.js"></script>
     <script defer src="../scipts/topButton.js"></script>
+    <script defer src="../scipts/slideshow.js"></script>
 </head>
 
 <body class="testing">
@@ -28,38 +29,60 @@
         <video poster="" controls id="vVid"></video>
         <div id="vList"></div>
     </div>
+    <h1>Horisontal</h1>
+<div class="slideshow-container">
+  <div class="mySlides1">
+    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic2.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides1">
+    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic1.jpg" style="width:100%">
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+
+<h1>Vertical</h1>
+<div class="slideshow-container">
+  <div class="mySlides2">
+    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic3.jpg">
+  </div>
+
+  <div class="mySlides2">
+    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic4.jpg">
+  </div>
+
+  <div class="mySlides2">
+    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic5.jpg">
+  </div>
+
+  <div class="mySlides2">
+    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic6.jpg">
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
     <div class="videos">
-        <article>
-            <h1>Random Youtube</h1>
+        <article class="embed">
+            <h1>Youtube embed testing</h1>
             <iframe src="https://www.youtube.com/embed/G1f3ZstUgcU" allowfullscreen></iframe>
         </article>
-        <article>
-            <h1>Spankbang Not HD in Embeded</h1>
+        <article class="embed">
+            <h1>Spankbang embed testing</h1>
             <iframe src="https://se.spankbang.com/6jk71/embed/" allowfullscreen></iframe>
         </article>
-        <article>
-            <h1>Pornhub</h1>
-            <iframe src="https://www.pornhub.com/embed/ph5faf7107ec827" allowfullscreen></iframe>
+        <article class="embed">
+            <h1>Pornhub embed testing</h1>
+            <iframe src="https://www.pornhub.com/embed/ph609b51e844d88" allowfullscreen></iframe>
         </article>
-        <article>
-            <h1>Isla White Sister custom</h1>
+        <article class="testing">
+            <h1>Testing Source</h1>
             <video poster="../img/thumbnails/isla-white-sister-custom.png" controls>
                 <source src="../vids/Isla White Sister custom.mp4" type="video/mp4">
             </video>
             <a href="https://www.manyvids.com/Video/4094631/Jerk-your-small-dick---SPH/" target="_blank" class="source">Source</a>
-        </article>
-        <article>
-            <h1>Random</h1>
-            <video controls>
-                <source src="../random/monstersofcock.17.07.02.august.ames.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <img class="testing" src="../img/thumbnails/claire_grimes_custom_pic1.jpg">
-        </article>
-        <article>
-            <h1>Claire Grimes</h1>
-            <video controls src="../vids/Claire Grimes Slingshot haul.mp4"></video>
         </article>
     </div>
     <footer>
