--- a/sites/youtube.html
+++ b/sites/youtube.html
@@ -22,17 +22,17 @@
     </header>
     <h1 class="title">Youtube</h1>
     <div class="videos">
-        <article>
+        <article class="embed">
             <h1>Claire Grimes</h1>
             <iframe src="https://www.youtube.com/embed/G1f3ZstUgcU" allowfullscreen></iframe>
         </article>
-        <article>
+        <article class="embed">
             <h1>Christina Khalil</h1>
             <iframe src="https://www.youtube.com/embed/m4z9Xc0dJl0" allowfullscreen></iframe>
         </article>
-        <article>
-            <h1>Lindsey Leigh</h1>
-            <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5" allowfullscreen></iframe>
+        <article class="embed">
+            <h1>Pornhub</h1>
+            <iframe src="https://www.pornhub.com/embed/ph62cbfdeab1212" allowfullscreen></iframe>
         </article>
     </div>
     <footer>
