--- a/sites/cei.html
+++ b/sites/cei.html
@@ -34,7 +34,7 @@
                 <source src="../vids/NicoleBelle A GOOD BOY EATS HIS OWN CUM.mp4" type="video/mp4">
             </video>
         </article>
-        <article>
+        <article class="embed">
             <h1>Lindsey Leigh</h1>
             <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5" allowfullscreen></iframe>
         </article>
