--- a/sites/custom-sweetkiss_69.html
+++ b/sites/custom-sweetkiss_69.html
@@ -63,6 +63,12 @@
                 <source src="../vids/Sweetkiss_69 voyeur milf dream flip.mp4" type="video/mp4">
             </video>
         </article>
+        <article>
+            <h1>Sweetkiss_69 Mom cuck</h1>
+            <video poster="../img/thumbnails/sweetkiss_69-mom-cuck.png" controls>
+                <source src="../vids/sweetkiss_69_mom-cucks-and-humiliates-you-pov.m4v" type="video/mp4">
+            </video>
+        </article>
     </div>
     <footer>
         <p>Yeet</p>
