--- a/sites/testing.html
+++ b/sites/testing.html
@@ -30,40 +30,40 @@
         <div id="vList"></div>
     </div>
     <h1>Horisontal</h1>
-<div class="slideshow-container">
-  <div class="mySlides1">
-    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic2.jpg" style="width:100%">
-  </div>
+    <div class="slideshow-container">
+        <div class="mySlides1">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic2.jpg" style="width:100%">
+        </div>
 
-  <div class="mySlides1">
-    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic1.jpg" style="width:100%">
-  </div>
+        <div class="mySlides1">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic1.jpg" style="width:100%">
+        </div>
 
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-</div>
+        <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+    </div>
 
-<h1>Vertical</h1>
-<div class="slideshow-container">
-  <div class="mySlides2">
-    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic3.jpg">
-  </div>
+    <h1>Vertical</h1>
+    <div class="slideshow-container">
+        <div class="mySlides2">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic3.jpg">
+        </div>
 
-  <div class="mySlides2">
-    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic4.jpg">
-  </div>
+        <div class="mySlides2">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic4.jpg">
+        </div>
 
-  <div class="mySlides2">
-    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic5.jpg">
-  </div>
+        <div class="mySlides2">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic5.jpg">
+        </div>
 
-  <div class="mySlides2">
-    <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic6.jpg">
-  </div>
+        <div class="mySlides2">
+            <img class="slide" src="../img/thumbnails/claire_grimes_custom_pic6.jpg">
+        </div>
 
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
-</div>
+        <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+    </div>
     <div class="videos">
         <article class="embed">
             <h1>Youtube embed testing</h1>
@@ -82,7 +82,8 @@
             <video poster="../img/thumbnails/isla-white-sister-custom.png" controls>
                 <source src="../vids/Isla White Sister custom.mp4" type="video/mp4">
             </video>
-            <a href="https://www.manyvids.com/Video/4094631/Jerk-your-small-dick---SPH/" target="_blank" class="source">Source</a>
+            <a href="https://www.manyvids.com/Video/4094631/Jerk-your-small-dick---SPH/" target="_blank"
+                class="source">Source</a>
         </article>
     </div>
     <footer>
